create artistic essence section

--- a/css/origin.css
+++ b/css/origin.css
@@ -4,8 +4,8 @@
     --bs-primary-rgb: 45, 113,112;
     --bs-secondary: #73B19C;
     --bs-secondary-rgb: 115, 177,156;
-    --bg-tertiary: #D9D9D9;
-    --bs-tertiary-rgb: 217, 217,217;
+    /* --bg-tertiary: #D9D9D9;
+    --bs-tertiary-rgb: 217, 217,217; */
 
 }
 
