--- a/css/origin.css
+++ b/css/origin.css
@@ -1,3 +1,15 @@
+/* set for all */
+* {
+  margin: 0;
+  padding: 0;
+  /* background-color: rgb(48, 127, 197); */
+  /* it was wrong-don't use color here, it will add space to header */
+
+  /* add font from google.font.com */
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+}
+
 /* primary: dark yellow, secondary: light yellow */
 :root{
     --bs-primary: #2D7170;
@@ -10,12 +22,42 @@
 }
 
 
+
 /* hero section */
-/* .hero-section {
+.banner {
     background: url(../images/screen.jpg) no-repeat center;
     background-size: cover;
-    width: 100%;
-    height: 100vh; */ */
-     /* Set background attachment to fixed */
-    /* background-attachment: fixed;
+    width: 100vw; /* Set width to 100vw (viewport width) */
+    height: 100vh; /* Set height to 100vh (viewport height) */
+    /* background-attachment: fixed; */
+    margin: 0; /* Remove any margin */
+    padding: 0; /* Remove any padding */
 }
+
+
+
+/* hero section */
+.banner-more {
+    background: url(../images/chat-fix.jpg) no-repeat center;
+    background-size: cover;
+    height: 50vh;
+    /* Set height to 100vh (viewport height) */
+    /* height: auto; */
+    /* background-size: contain; */
+    margin: 0; /* Remove any margin */
+    padding: 0; /* Remove any padding */
+}
+
+
+/* about page main banner section */
+.banner-about {
+    background: url(../images/mooncity.jpg) no-repeat center;
+    background-size: cover;
+    width: 100vw; /* Set width to 100vw (viewport width) */
+    height: 100vh; /* Set height to 100vh (viewport height) */
+    /* background-attachment: fixed; */
+    margin: 0; /* Remove any margin */
+    padding: 0; /* Remove any padding */
+}
+
+
